# ubuntu_brightness_control

./: CMakeLists.txt  README.md  main.c
install/: .install.sh.swp  install.sh
server/: dz_brightness_control.service
